# gravity-testnet-v2

./: .gitignore  Cargo.toml  Dockerfile  readme.md  run.sh
rust/: Cargo.toml  fake-main.rs
rust/src/: main.rs  utils.rs
src/: main.rs  utils.rs
testnet-scripts/: run.sh
tla/: GravityMBT.tla  GravityMBTTests.tla
