[package]
name = "gravity-testnet-v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmos_gravity = { path = "../cosmos-gravity-bridge/orchestrator/cosmos_gravity" }
clarity = "0.4"
deep_space = "2.4"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }